<resources>
    <string name="app_name">RouteOneApp</string>
    <string name="android_course">Android Course</string>
    <string name="todo">TODO</string>
    <string name="routeoneapp">RouteAppOne</string>
    <string name="ios_course">IOS Course</string>
    <string name="full_stack">Full Stack</string>
    <string name="part_1_java_se">Part 1 (Java SE)</string>
    <string name="_1_introduction_to_java_programing">1-Introduction to Java Programming</string>
    <string name="overview">* OverView</string>
    <string name="compiler_and_jvm">* Compiler and JVM</string>
    <string name="project_structure">* Project Structure</string>
    <string name="hello_world_application">* Hello World Application</string>
    <string name="variables_and_data_types">* Variables and Data types</string>
    <string name="operators">* Operators</string>
    <string name="conditional_statements_if_switch">* Conditional Statements (IF - Switch)</string>
    <string name="loops_for_while_do_while">* loops (For - While - Do While)</string>
    <string name="_2_basics">2. Basics</string>
    <string name="nasted_loops">* nasted loops</string>
    <string name="strings">* Strings</string>
    <string name="arrays">* Arrays</string>
    <string name="oop_refreshment">OOP refreshment</string>
    <string name="introduction">* Introduction</string>
    <string name="a_installing_os_x_virtual_machine">a- Installing OS X Virtual Machine</string>
    <string name="c_a_guided_tour_of_xcode">c- A guided tour Of Xcode</string>
    <string name="b_installing_xcode_and_the_ios_sdk">b- Installing Xcode and the iOS SDK</string>
    <string name="d_an_introduction_to_xcode_playgrounds">d- An Introduction to Xcode Playgrounds</string>
    <string name="swift_programming_language">* Swift Programming Language</string>
    <string name="a_swift_data_types_constants_and_variables">a- Swift Data types , Constants , and Variables</string>
    <string name="c_swift_flow_control">c- Swift Flow Control</string>
    <string name="d_the_swift_switch_statemnet">d- The Swift Switch Statemnet</string>
    <string name="e_an_overview_of_swift">e- An Overview Of Swift</string>
    <string name="b_swift_operators_and_expressions">b- Swift Operators and Expressions</string>
    <string name="html">* HTML</string>
    <string name="html_5">* HTML 5</string>
    <string name="css">* CSS</string>
    <string name="css3">* CSS3</string>
    <string name="sass">* SASS</string>
    <string name="bootstrap_4">* Bootstrap 4</string>
    <string name="javascript">* JavaScript</string>
    <string name="regular_experssion">* Regular Experssion</string>
    <string name="ecmascript_6">* ECMAScript 6</string>
    <string name="jquery">* JQuery</string>
    <string name="angular_7">* angular 7</string>
    <string name="fabric_js">* fabric.js</string>
    <string name="ajax">* AJAX</string>
    <string name="json">* JSON</string>
    <string name="hosting_and_domains">* Hosting and domains</string>
    <string name="freelancing_tips_and_tricks">* Freelancing Tips and Tricks</string>
</resources>