<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IosCourseActivity"
    android:background="@drawable/bg"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#0F2BC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/routeoneapp"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/androidImageCourse"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ios"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/androidImageCourse"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:text="@string/oop_refreshment"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textAlignment="textStart"/>
    <TextView
        android:id="@+id/txt2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        android:layout_marginStart="34dp"
        android:text="@string/introduction"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:textAlignment="textStart"/>
    <TextView
        android:id="@+id/txt3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt2"
        android:layout_marginStart="40dp"
        android:text="@string/a_installing_os_x_virtual_machine"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="textStart"/>
    <TextView
        android:id="@+id/txt4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt3"
        android:layout_marginStart="40dp"
        android:text="@string/b_installing_xcode_and_the_ios_sdk"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="textStart"/>
    <TextView
        android:id="@+id/txt5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt4"
        android:layout_marginStart="40dp"
        android:text="@string/c_a_guided_tour_of_xcode"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="textStart"/>

    <TextView
        android:id="@+id/txt6"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/d_an_introduction_to_xcode_playgrounds"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt5" />
    <TextView
        android:id="@+id/txt7"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/swift_programming_language"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginStart="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt6" />
    <TextView
        android:id="@+id/txt8"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/a_swift_data_types_constants_and_variables"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt7" />
    <TextView
        android:id="@+id/txt9"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/b_swift_operators_and_expressions"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt8" />
    <TextView
        android:id="@+id/txt10"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/c_swift_flow_control"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt9" />
    <TextView
        android:id="@+id/txt11"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/d_the_swift_switch_statemnet"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt10" />
    <TextView
        android:id="@+id/txt12"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/e_an_overview_of_swift"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="34dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt11" />

</androidx.constraintlayout.widget.ConstraintLayout>