<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#0F2BC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/routeoneapp"
           android:textColor="@color/white"
           android:textSize="23sp"
           android:textStyle="bold"
           android:layout_marginTop="15dp"
           android:layout_marginStart="15dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/androidImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
       android:src="@drawable/android"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/androidBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/android_course"
        android:textSize="13sp"
        android:textStyle="bold"
        android:onClick="onAndroidCourse"
        android:textColor="@color/white"
        android:backgroundTint="#2B41BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/androidImage" />

    <ImageView
        android:id="@+id/iosImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/androidBtn"
        android:src="@drawable/ios"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/iosBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/ios_course"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="#2B41BD"
        android:onClick="onIosCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iosImage" />

    <ImageView
        android:id="@+id/fullstackImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iosBtn"
        android:src="@drawable/fullstack"
        android:scaleType="fitXY"
        android:contentDescription="@string/todo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fullstackBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/full_stack"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="#2B41BD"
        android:onClick="onFullstackCourse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullstackImage" />
</androidx.constraintlayout.widget.ConstraintLayout>